# ai-through-symbiosis

./: .gitignore  README.md  cv2_live_webcam.py  darshan_pipeline.py  distortion.npy  distortion_gopro.npy  extract_features.py  extract_features_multiprocessing_server.py  extract_features_parallel.py  extract_hand.py  frame_to_color_clusters.py  gesture_recognition_functions.py  intrinsic.npy  intrinsic_gopro.npy  main.py  optical_flow.py  picklist_144  picklist_145  picklist_146  picklist_147  picklist_148  picklist_149  picklist_150  picklist_151  picklist_152  picklist_153  picklist_154  picklist_155  picklist_184  requirements.txt  temp.sh  tmp.sh  undistort_image.py  vector_visualizer.py  visualize_results.py  visualize_vector.py
Labels/: GX010043.txt  picklist_10.lab  picklist_100_raw.txt  picklist_101_raw.txt  picklist_102_raw.txt  picklist_103_raw.txt  picklist_105_raw.txt  picklist_106_raw.txt  picklist_107_raw.txt  picklist_108_raw.txt  picklist_109_raw.txt  picklist_10_carry.lab  picklist_10_general.lab  picklist_10_pick.lab  picklist_10_raw.txt  picklist_110_raw.txt  picklist_111_raw.txt  picklist_112_raw.txt  picklist_113_raw.txt  picklist_114_raw.txt  picklist_115_raw.txt  picklist_116_raw.txt  picklist_117_raw.txt  picklist_118_raw.txt  picklist_119_raw.txt  picklist_11_carry.lab  picklist_11_pick.lab  picklist_11_raw.txt  picklist_120_raw.txt  picklist_121_raw.txt  picklist_122_raw.txt  picklist_123_raw.txt  picklist_124_raw.txt  picklist_125_raw.txt  picklist_126_raw.txt  picklist_127_general.lab  (+304 more)
packaged/htk_train/service-wrapper/: pyproject.toml
(+15604 files in other folders)
